Including Moonoworks csproj

--- a/MoonRose.ImGuiNet.csproj
+++ b/MoonRose.ImGuiNet.csproj
@@ -38,4 +38,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\MoonWorks\MoonWorks.csproj" />
+  </ItemGroup>
+
 </Project>
