changed moonworks path ref

--- a/MoonRose.ImGuiNet.csproj
+++ b/MoonRose.ImGuiNet.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MoonWorks\MoonWorks.csproj" />
+    <ProjectReference Include="..\MoonWorks\MoonWorks.csproj" />
   </ItemGroup>
 
 </Project>
